# pipefy-agent-bridge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.cursor/: environment.json
.cursor/commands/: development.md  generate-tasks.md  prd.md
.cursor/rules/: agent-clean-code.mdc  python-best-practices.mdc
.github/: dependabot.yml
configs/: pipefy_nat_workflow.yml  pipefy_nat_workflow_profile.yml  tool_allowlist.yml
demos/: 01_cursor_pipefy_ops.py  02_nat_smoke.sh  03_cursor_cloud_ops.py  __init__.py  _cloud_config.py  _cursor_harness.py
docs/: ARCHITECTURE_AND_IMPLEMENTATION_PLAN.md  BENCHMARKS.md  CLOUD.md  LEARNINGS.md  OPEN_DECISIONS.md  README.md  REPOSITORY_GOVERNANCE.md  TRY_IT_YOURSELF.md
embeddings/: README.md  __init__.py  card_text.py  embed.py  find_similar.py  index.py  passage_cache.py  rank.py
eval/: bundle_nat_profile.py  capture_scenario_baseline.py  compare.py  eval_summary.py  golden.yaml  golden_errors.py  golden_expect.py  golden_loader.py  ground_truth.sh  ground_truth_refresh.py  inventory_prompt.py  nat_inventory_eval_prompt.py  profile_nat.sh  run_eval.py
private/: CONTEXT.md.example
product/prd/: README.md  (+3 more)
scripts/: _cloud_probe_common.py  apply-github-governance.sh  cloud_bootstrap.sh  cloud_probe_secrets.py  cloud_probe_vm.py  doctor.sh  extract_nat_answer.py  tour.sh
tests/: __init__.py  conftest.py  test_bundle_nat_profile.py  test_capture_scenario_baseline.py  test_card_text.py  test_cloud_config.py  test_compare.py  test_cursor_harness.py  test_embed.py  test_embed_index.py  test_extract_nat_answer.py  test_find_similar.py  test_golden_expect.py  test_golden_loader.py  test_ground_truth_integration.py  test_ground_truth_refresh.py  test_inventory_prompt.py  test_passage_cache.py  test_rank.py  test_rank_faiss_parity.py  test_run_eval.py
(+12 files in other folders)
